# lingshu

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  alembic.ini  config.yaml  pyproject.toml  skills-lock.json  使用指南.md
alembic/: env.py
bushu/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml  nginx.conf  prometheus.yml  requirements-ci.txt
data/: gnn_config.json  gnn_model.pt  zz500_codes.txt
fengkong/: __init__.py  circuit_breaker.py  metrics.py  position_limiter.py  position_tracker.py  rate_limiter.py  risk_manager.py  stress_tester.py  var_calculator.py
huice/: __init__.py  attribution.py  backtest_engine.py  cross_validation.py  data_snooping.py  grid_search.py  metrics.py  performance_metrics.py  report_generator.py
jiekou/: __init__.py  dependencies.py  metrics.py  middleware.py  schemas.py  server.py
jingsuan/: __init__.py  _copula_fit.py  copula_engine.py  credibility.py  dcc_copula.py  evt_engine.py  gev_engine.py  reserving.py  risk_budget.py  ruin_engine.py  scenario_gen.py  solvency.py  stress_engine.py  var_backtest.py
juece/: __init__.py  benchmark.py  ensemble_engine.py  factor_fusion.py  hrp.py  lambda_rank.py  metrics.py  portfolio_optimizer.py  rebalancer.py  stock_selector.py
lingshulianghuasheji/: CONTRACTS.md  优化计划.md  灵枢量化系统-设计文档.md  灵枢量化系统-设计演示.pptx  论文优化方案.md  重构蓝图.md
qianduan/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: backfill_fusion_scores.py  compute_factor_ic.py  compute_factors_from_db.py  compute_factors_full.py  compute_financial_factors.py  download_tushare_data.py  extend_history_akshare.py  factor_quality_assessment.py  factor_validation.py  import_data_to_db.py  phase0_fix_data.py  run_daily_pipeline.py  run_final_backtest.py  run_full_period_backtest.py  run_grid_search.py  run_simple_backtest.py  search_fusion_weights.py  train_gnn_model.py
shuju/: __init__.py  akshare_fetcher.py  cache_manager.py  config.py  constants.py  corporate_action.py  data_aligner.py  data_preprocessor.py  label_builder.py  metrics.py  news_fetcher.py  quality_monitor.py  sentiment_fetcher.py  tushare_fetcher.py  universe_manager.py  utils.py
shujuku/: __init__.py  config.py  metrics.py  migrations.py  redis_cache.py  repository.py  safe_divide.py  session.py  settings.py
tests/: conftest.py  test_integration_real.py  verify_jingsuan_v41.py
(+150 files in other folders)
